[gd_scene load_steps=21 format=3 uid="uid://m4hx1ig8baq0"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_67srf"]
[ext_resource type="PackedScene" uid="uid://bpbxtf4hs8obx" path="res://scenes/PatternMap.tscn" id="2_5piyp"]
[ext_resource type="FontFile" uid="uid://ch0fa8ytvrsm2" path="res://assets/kenney_ui-pack/Font/Kenney Future Narrow.ttf" id="2_t7m6d"]
[ext_resource type="PackedScene" uid="uid://bavkarbejk6iy" path="res://scenes/Player.tscn" id="4_8ecqg"]
[ext_resource type="PackedScene" uid="uid://584fjvi3ddiy" path="res://scenes/mob_spawner.tscn" id="5_aqewm"]
[ext_resource type="PackedScene" uid="uid://c332828ydlg0y" path="res://scenes/WaveManager.tscn" id="5_wb7rp"]
[ext_resource type="PackedScene" uid="uid://wna6vmxi4s6" path="res://scenes/BaseWeapon.tscn" id="7_euf6g"]
[ext_resource type="PackedScene" uid="uid://dj4ope1j71tnw" path="res://scenes/LevellingHUD.tscn" id="8_7uhdb"]
[ext_resource type="Texture2D" uid="uid://cimkj0cn3yqwg" path="res://assets/Coin_Gems/MonedaD.png" id="8_71geu"]
[ext_resource type="FontFile" uid="uid://37n3hdxauwek" path="res://assets/kenney_kenney-fonts/Fonts/Kenney High Square.ttf" id="8_f7c0k"]
[ext_resource type="PackedScene" uid="uid://b43lgj5ltw4c6" path="res://scenes/PauseMenu.tscn" id="8_fvsre"]
[ext_resource type="PackedScene" uid="uid://0ttlxw1xsrl0" path="res://scenes/XP_bar.tscn" id="8_jxx0y"]
[ext_resource type="PackedScene" uid="uid://8wekor8bddds" path="res://scenes/GlobalTimerManager.tscn" id="9_ryc8o"]
[ext_resource type="PackedScene" uid="uid://dnaukp13y0uiq" path="res://scenes/Potion.tscn" id="11_jfcqc"]
[ext_resource type="PackedScene" uid="uid://b2uopyjutjlrr" path="res://scenes/EndGame.tscn" id="11_pysly"]
[ext_resource type="PackedScene" uid="uid://cw017vti4gx2u" path="res://scenes/GoldCoin.tscn" id="12_pejgq"]
[ext_resource type="AudioStream" uid="uid://ch3h4ctradcw4" path="res://assets/5 Action Chiptunes By Juhani Junkala/Juhani Junkala [Retro Game Music Pack] Level 1.wav" id="17_4b8f7"]

[sub_resource type="LabelSettings" id="LabelSettings_c06pf"]
font = ExtResource("2_t7m6d")
font_size = 64
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_jurm8"]
atlas = ExtResource("8_71geu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_ytert"]
font = ExtResource("8_f7c0k")
font_size = 64
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_67srf")

[node name="PatternMap" parent="." instance=ExtResource("2_5piyp")]

[node name="Player" parent="." instance=ExtResource("4_8ecqg")]
floor_constant_speed = true

[node name="MobSpawner" parent="." instance=ExtResource("5_aqewm")]
min_spawn_radius = 300
max_spawn_radius = 1400

[node name="WaveManager" parent="." instance=ExtResource("5_wb7rp")]

[node name="BaseWeapon" parent="." instance=ExtResource("7_euf6g")]

[node name="PauseMenu" parent="." instance=ExtResource("8_fvsre")]

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="XPBarContainer" parent="GameUI/Control" instance=ExtResource("8_jxx0y")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 1
grow_vertical = 1

[node name="LevelUpButton" type="Button" parent="GameUI/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -15.5
offset_right = 37.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Level Up"

[node name="TimerLabel" type="Label" parent="GameUI/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 72.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 2
label_settings = SubResource("LabelSettings_c06pf")

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="GoldCoin" type="TextureRect" parent="GameUI/Control/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = SubResource("AtlasTexture_jurm8")

[node name="CurrentGoldRun" type="Label" parent="GameUI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_ytert")
vertical_alignment = 1

[node name="LevellingHUD" parent="." instance=ExtResource("8_7uhdb")]

[node name="EndGame" parent="." instance=ExtResource("11_pysly")]

[node name="GlobalTimerManager" parent="." instance=ExtResource("9_ryc8o")]
potion_scene = ExtResource("11_jfcqc")
gold_coin_scene = ExtResource("12_pejgq")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_4b8f7")
autoplay = true

[connection signal="pressed" from="GameUI/Control/LevelUpButton" to="Player" method="_on_LevelUpButton_pressed"]
